# miktos-ai-bridge-platform

./: .gitignore  100_PERCENT_COMPLETION_ACHIEVEMENT.md  COMPLETION_100_PERCENT_REPORT.md  FEATURE_EXPANSION_ROADMAP.md  NEXT_STEPS_IMPLEMENTATION_PLAN.md  PRIORITY_3_COMPLETE.md  PRODUCTION_BUILD_COMPLETE.md  PROJECT_STATUS.md  README.md  SAFETY_MANAGER_FIX_REPORT.md  SKILL_LIBRARY_EXPANSION_COMPLETE.md  TESTING_DASHBOARD.md  __init__.py  api_server.py  blender_test_script.py  complete_final_3_percent.py  completion_results.json  config.yaml  config_backup.yaml  config_optimized.yaml  integration_test_results.json  launch_miktos.sh  main.py  package.json  performance_optimization.py  performance_optimization_results.json  priority_2_demo.py  priority_3_core_demo.py  priority_3_demo.py  pyproject.toml  pyrightconfig.json  requirements.txt  setup.py  simple_blender_test.py  start_miktos.sh  test_direct_blender.py  test_integration_endtoend.py  test_priority_2.py
.github/workflows/: release.yml  validate.yml  validate.yml.new
agent/: __init__.py  blender_bridge.py  operation_validator.py  result_analyzer.py  scene_manager.py
community/: COMMUNITY_ADOPTION_STRATEGY.md
core/: __init__.py  agent.py  cache_manager.py  command_parser.py  learning_engine.py  llm_integration.py  nlp_processor.py  optimization_engine.py  performance_monitor.py  realtime_manager.py  safety_manager.py  types.py
docs/: API_REFERENCE.md  COMPLETE_USER_GUIDE.md  DEPLOYMENT_GUIDE.md  GETTING_STARTED.md  INSTALLATION.md  PORT_CONFLICT_RESOLUTION.md  PORT_CONFLICT_RESOLUTION_COMPLETED.md
enterprise/: ENTERPRISE_INTEGRATION_STRATEGY.md
onboarding/: USER_ONBOARDING_SYSTEM.md
production/: PRODUCTION_DEPLOYMENT_PLAN.md
skills/: skill_manager.py
skills/lighting/: __init__.py  environment_lighting.py  studio_lighting.py
skills/materials/: __init__.py  pbr_materials.py  procedural_textures.py
skills/modeling/: mesh_operations.py  modifiers.py  primitives.py
viewer/: __init__.py  demo_conflict_resolution.py  port_manager.py  real_time_viewer.py  scene_sync.py  simple_web_server.py  test_port_comprehensive.py  test_port_resolution.py  viewport_manager.py  web_server.py  webgl_renderer.py
viewer/web/: index.html
workflows/: enhanced_workflow_manager.py
